# AdVantage

./: .gitignore  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yml
src/advantage/: optimizer.py
src/agents/: __init__.py
src/api/: server.go
tests/: test_optimizer.py
