[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advantage"
version = "0.1.0"
description = "AI-powered advertising intelligence and budget optimization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Sameer Alam" }]
keywords = [
    "advertising", "ad-optimization", "budget-allocation", "ppc",
    "marketing-analytics", "ai-agents", "creative-analysis",
    "audience-intelligence", "performance-marketing", "roi"
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/advantage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100
